# aline

./: Cargo.toml  README.md
src/: count.rs  lib.rs  main.rs  re.rs
src/testdata/: assets.csv
tests/: lib_test.rs
tests/testdata/: small.csv
